--- a/EDBProjectNineMVC/Views/Home/Index.cshtml
+++ b/EDBProjectNineMVC/Views/Home/Index.cshtml
@@ -2,30 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="descriptiontag">
+    <h1>Officereview.net</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ornare ac lacus eu viverra. Nulla tincidunt congue est sed faucibus. Praesent pharetra viverra ornare. Pellentesque sed lectus sed justo sodales viverra. Phasellus auctor massa sed tortor aliquam, sed tempus sapien placerat. Nulla ultrices, quam eget semper dignissim, risus lacus tempor diam, eget sagittis ante felis eu nibh. Donec sed dapibus enim. Cras condimentum tempus fermentum. Quisque ullamcorper ante nec elit ullamcorper scelerisque. Suspendisse aliquet congue tincidunt.</p>
+    
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="row" id="jumbotron">
+    <div class="col-12" id="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YLN1Argi7ik" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    
 </div>
