--- a/EDBProjectNineMVC/Views/Reviews/Index.cshtml
+++ b/EDBProjectNineMVC/Views/Reviews/Index.cshtml
@@ -4,13 +4,14 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <div class="container-fluid">
     <div class="row">
+    <p>
+    @Html.ActionLink("Or, Write Your Own Review!", "Create")
+    </p>
+    </div>
+    <div class="row" id="tableheader">
         <div class="col">
             @Html.DisplayNameFor(model => model.Category.CategoryType)
         </div>
@@ -26,26 +27,30 @@
         <div></div>
     </div>
 
-@foreach (var item in Model) {
-    <div class="row">
-        <div class="col">
-            @Html.DisplayFor(modelItem => item.Category.CategoryType)
-        </div>
-        <div class="col">
-            @Html.DisplayFor(modelItem => item.Title)
-        </div>
-        <div class="col">
-            @Html.DisplayFor(modelItem => item.Content)
-        </div>
-        <div class="col">
-            @Html.DisplayFor(modelItem => item.ReviewDate)
-        </div>
-        <div class="col">
-            @Html.ActionLink("Edit", "Edit", new { id=item.ReviewID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ReviewID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ReviewID })
-        </div>
-    </div>
-}
+    @foreach (var item in Model)
+    {
+        <div class="row" id="reviewdisplay">
+            <div class="col">
+                @Html.DisplayFor(modelItem => item.Category.CategoryType)
+            </div>
+            <div class="col">
+                @Html.DisplayFor(modelItem => item.Title)
+            </div>
+            <div class="col">
+                @Html.DisplayFor(modelItem => item.Content)
+            </div>
+            <div class="col">
+                @Html.DisplayFor(modelItem => item.ReviewDate)
+            </div>
+            <div class="col">
+                <button class="btn success">@Html.ActionLink("Edit", "Edit", new { id = item.ReviewID })</button>
+                <button class="btn success">@Html.ActionLink("Details", "Details", new { id = item.ReviewID })</button>
+                <button class="btn success">@Html.ActionLink("Delete", "Delete", new { id = item.ReviewID })</button>
 
+                
+             
+            </div>
+        </div>
+    }
+        
 </div>
