--- a/EDBProjectNineMVC/Views/Shared/_Layout.cshtml
+++ b/EDBProjectNineMVC/Views/Shared/_Layout.cshtml
@@ -6,12 +6,26 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <style>
+        /* Make the image fully responsive */
+        .carousel-inner img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 
 </head>
-<body id="sharedbody"> @*I added an ID to effect the body of the shared layout specifically.*@
+<body id="sharedbody">
+    @*I added an ID to effect the body of the shared layout specifically.*@
     <div class="container" id="board">
         <div id="content">
-            <p id="title">Review Corp</p>
+            <p id="title">OfficeReview.net</p>
             <p id="subtitle">Office Technology Solutions</p>
             <br>
             <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
@@ -35,17 +49,72 @@
                 @Html.ActionLink("Reviews", "Index", "Reviews")
             </li>
             <li class="nav-item">
-                @Html.ActionLink("Contact", "Contact", "Home")
+                @Html.ActionLink("Review Categories", "Index", "Categories")
             </li>
         </ul>
 
     </nav>
-        
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12" id="">
+                <h2>Check out a review on your favorite products!</h2>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
+
+        <div id="demo" class="carousel slide" data-ride="carousel">
+
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+
+                    <img src="~/Content/Images/img_Vr 1.jpg" alt="Los Angeles" width="800" height="300">
+                </div>
+                <div class="carousel-item">
+
+                    <img src="~/Content/Images/img_officerelocation.jpg" alt="Chicago" width="800" height="300">
+                </div>
+                <div class="carousel-item">
+
+                    <img src="~/Content/Images/img_future_office.jpg" alt="New York" width="800" height="300">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Ernest Bluford ASP.NET Application</p>
         </footer>
     </div>
 
