--- a/EDBProjectNineMVC/Views/Home/Index.cshtml
+++ b/EDBProjectNineMVC/Views/Home/Index.cshtml
@@ -2,12 +2,12 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="descriptiontag">
+<div class="descriptiontag">@* Site description *@
     <h1>Officereview.net</h1>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ornare ac lacus eu viverra. Nulla tincidunt congue est sed faucibus. Praesent pharetra viverra ornare. Pellentesque sed lectus sed justo sodales viverra. Phasellus auctor massa sed tortor aliquam, sed tempus sapien placerat. Nulla ultrices, quam eget semper dignissim, risus lacus tempor diam, eget sagittis ante felis eu nibh. Donec sed dapibus enim. Cras condimentum tempus fermentum. Quisque ullamcorper ante nec elit ullamcorper scelerisque. Suspendisse aliquet congue tincidunt.</p>
     
 </div>
-
+@* A jumbotron youtube video styled with bootstrap/flexbox *@
 <div class="row" id="jumbotron">
     <div class="col-12" id="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YLN1Argi7ik" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
