--- a/EDBProjectNineMVC/Views/Reviews/Details.cshtml
+++ b/EDBProjectNineMVC/Views/Reviews/Details.cshtml
@@ -9,7 +9,7 @@
 <div>
     <h2>Review</h2>
 
-    <div class="card"> @* Card View for Details partial view. *@
+    <div class="card" id="detailscard"> @* Card View for Details partial view. *@
         <img src="img_avatar.png" alt="Avatar" style="width:100%">
         <div class="container">
             <h4><b>@Html.DisplayNameFor(model => model.Category.CategoryType)</b></h4>
